force-app/main/default/objects/Configuration__c/fields/Detail_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Detail_Field_1__c</fullName>
    <label>Detail Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>