force-app/main/default/objects/Configuration__c/fields/Detail_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Detail_Field_3__c</fullName>
    <label>Detail Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>