force-app/main/default/objects/Configuration__c/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <label>Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>