force-app/main/default/objects/Configuration__c/fields/Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Search_Field__c</fullName>
    <label>Search Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>