force-app/main/default/objects/Configuration__c/fields/Visual_Field__c.field-meta.xml
<CustomField>
    <fullName>Visual_Field__c</fullName>
    <label>Visual Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>