force-app/main/default/objects/Configuration__c/fields/Visual_Type__c.field-meta.xml
<CustomField>
    <fullName>Visual_Type__c</fullName>
    <label>Visual Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Abbreviation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>