force-app/main/default/objects/Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Relationship_Field__c</columns>
    <columns>Detail_Field_1__c</columns>
    <columns>Detail_Field_2__c</columns>
    <columns>Detail_Field_3__c</columns>
    <columns>Detail_Field_4__c</columns>
    <columns>Detail_Field_5__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>